testwallet/otapiPINVOKE.cs


  [DllImport("otapi", EntryPoint="CSharp_OT_API_VerifyUserPrivateKey")]
  public static extern int OT_API_VerifyUserPrivateKey(string jarg1);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_LoadPurse")]
  public static extern string OT_API_LoadPurse(string jarg1, string jarg2);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_LoadMint")]
  public static extern string OT_API_LoadMint(string jarg1, string jarg2);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_LoadAssetContract")]
  public static extern string OT_API_LoadAssetContract(string jarg1);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_LoadAssetAccount")]
  public static extern string OT_API_LoadAssetAccount(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_LoadInbox")]
  public static extern string OT_API_LoadInbox(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_LoadOutbox")]
  public static extern string OT_API_LoadOutbox(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_Ledger_GetCount")]
  public static extern int OT_API_Ledger_GetCount(string jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_Ledger_CreateResponse")]
  public static extern string OT_API_Ledger_CreateResponse(string jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_Ledger_GetTransactionByIndex")]
  public static extern string OT_API_Ledger_GetTransactionByIndex(string jarg1, string jarg2, string jarg3, string jarg4, int jarg5);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_Ledger_GetTransactionByID")]
  public static extern string OT_API_Ledger_GetTransactionByID(string jarg1, string jarg2, string jarg3, string jarg4, string jarg5);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_Ledger_GetTransactionIDByIndex")]
  public static extern string OT_API_Ledger_GetTransactionIDByIndex(string jarg1, string jarg2, string jarg3, string jarg4, int jarg5);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_Ledger_AddTransaction")]
  public static extern string OT_API_Ledger_AddTransaction(string jarg1, string jarg2, string jarg3, string jarg4, string jarg5);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_Transaction_CreateResponse")]
  public static extern string OT_API_Transaction_CreateResponse(string jarg1, string jarg2, string jarg3, string jarg4, string jarg5, int jarg6);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_Transaction_GetType")]
  public static extern string OT_API_Transaction_GetType(string jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_checkServerID")]
  public static extern void OT_API_checkServerID(string jarg1, string jarg2);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_createUserAccount")]
  public static extern void OT_API_createUserAccount(string jarg1, string jarg2);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_checkUser")]
  public static extern void OT_API_checkUser(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_getRequest")]
  public static extern void OT_API_getRequest(string jarg1, string jarg2);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_getTransactionNumber")]
  public static extern void OT_API_getTransactionNumber(string jarg1, string jarg2);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_issueAssetType")]
  public static extern void OT_API_issueAssetType(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_getContract")]
  public static extern void OT_API_getContract(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_getMint")]
  public static extern void OT_API_getMint(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_createAssetAccount")]
  public static extern void OT_API_createAssetAccount(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_getAccount")]
  public static extern void OT_API_getAccount(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_issueBasket")]
  public static extern void OT_API_issueBasket(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_exchangeBasket")]
  public static extern void OT_API_exchangeBasket(string jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_notarizeWithdrawal")]
  public static extern void OT_API_notarizeWithdrawal(string jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_notarizeDeposit")]
  public static extern void OT_API_notarizeDeposit(string jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_notarizeTransfer")]
  public static extern void OT_API_notarizeTransfer(string jarg1, string jarg2, string jarg3, string jarg4, string jarg5, string jarg6);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_getInbox")]
  public static extern void OT_API_getInbox(string jarg1, string jarg2, string jarg3);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_processInbox")]
  public static extern void OT_API_processInbox(string jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_withdrawVoucher")]
  public static extern void OT_API_withdrawVoucher(string jarg1, string jarg2, string jarg3, string jarg4, string jarg5, string jarg6);

  [DllImport("otapi", EntryPoint="CSharp_OT_API_depositCheque")]
  public static extern void OT_API_depositCheque(string jarg1, string jarg2, string jarg3, string jarg4);
}
